WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257401
[Cocoa] [GPUP] Compressed fonts are decompressed twice, which is one too many times
https://bugs.webkit.org/show_bug.cgi?id=257401
Summary
[Cocoa] [GPUP] Compressed fonts are decompressed twice, which is one too many...
Myles C. Maxfield
Reported
2023-05-26 16:29:18 PDT
[GPUP] Compressed fonts are decompressed twice, which is once too many times
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-05-26 16:29:34 PDT
<
rdar://problem/109910582
>
Myles C. Maxfield
Comment 2
2023-05-26 16:36:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14410
EWS
Comment 3
2023-05-31 02:24:59 PDT
Committed
264724@main
(21ab6bc788f2): <
https://commits.webkit.org/264724@main
> Reviewed commits have been landed. Closing PR #14410 and removing active labels.
WebKit Commit Bot
Comment 4
2023-05-31 03:18:19 PDT
Re-opened since this is blocked by
bug 257531
Myles C. Maxfield
Comment 5
2023-05-31 03:52:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14533
EWS
Comment 6
2023-05-31 12:46:58 PDT
Committed
264750@main
(1693e2b8edc6): <
https://commits.webkit.org/264750@main
> Reviewed commits have been landed. Closing PR #14533 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug